--- a/views/mail.jade
+++ b/views/mail.jade
@@ -13,19 +13,20 @@ block content
             div(class='valign-wrapper')
                 div(class='row valign')
                     div(class='card')
-                        div(class='card-image')
-                            img(src= 'http://bangladeshihistory.com/images/maghrib.jpg')
-                            h1.truncate
-                                span(class='card-title heavy-font') Meet Maghrib
-                        div(class='card-content')
-                            p(class='flow-text padding-top') Thanks for reaching out!
-                            blockquote #{message}
-                            p #{senderName} #{senderEmail}
-                            br
-                            p(class='flow-text padding-top') Well, now that you have my information, you can have your people set something up with my people. ;) I'll reply as soon as I get the chance. But in the meanwhile, let me introduce a dear friend of mine.
-                            p(class='flow-text padding-top') This is Maghrib <span class="small" style="font-style:italic"> (maġrib).</span> He loves the heated space atop my laptop keyboard. <strong>Fun Fact:</strong> The picture above captures him in a position we at <a href="http://www.withpulp.com">With Pulp</a> call "Cat Loaf". :D
+                        div(style='width: 70%')
+                            div(class='card-image')
+                                img(src= 'http://bangladeshihistory.com/images/maghrib.jpg')
+                                h1.truncate
+                                    span(class='card-title heavy-font') Meet Maghrib
+                            div(class='card-content')
+                                p(class='flow-text padding-top') Thanks for reaching out!
+                                blockquote #{message}
+                                p #{senderName} #{senderEmail}
+                                br
+                                p(class='flow-text padding-top') Well, now that you have my information, you can have your people set something up with my people. ;) I'll reply as soon as I get the chance. But in the meanwhile, let me introduce a dear friend of mine.
+                                p(class='flow-text padding-top') This is Maghrib <span class="small" style="font-style:italic"> (maġrib).</span> He loves the heated space atop my laptop keyboard. <strong>Fun Fact:</strong> The picture above captures him in a position we at <a href="http://www.withpulp.com">With Pulp</a> call "Cat Loaf". :D
 
-                            p(class='flow-text padding-top') Look forward to speaking to you!
-                            div(class='right-align')
-                                p(class='padding-top') Best,
-                                p #{name}
+                                p(class='flow-text padding-top') Look forward to speaking to you!
+                                div(class='right-align')
+                                    p(class='padding-top') Best,
+                                    p #{name}
