cleaned up mail, headers, and facebook, twitter data

--- a/views/includes/common/footer.jade
+++ b/views/includes/common/footer.jade
@@ -20,6 +20,8 @@ footer#footer.page-footer.green.lighten-5
                         .col.s12.m6.right-align
                             p.flow-text Share your stories with hashtag <a href="https://www.instagram.com/#bangladeshihistory" target="_blank">#bangladeshihistory</a>
 .footer-copyright.green.lighten-4
-    .container
-        .right-align
-            | a <a href='http://withpulp.com' target='_blank'>WITHPULP</a> experiment
+    .row.remove-margin-bottom
+        .col.s12
+            .container
+                .right-align
+                    | a <a href='http://withpulp.com' target='_blank'>WITHPULP</a> experiment
