--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -4,24 +4,24 @@ html(lang='en')
         meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
         meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
         // Google
-        meta(name='description' content='Novelist, Artisan, Programmer,  Entrepreneur')
-        meta(name='keywords' content='QA, Quality Assurance, QA Analyst, Quality Assurrance Analyst, Quality Assurance Engineer, Automation Engineer, Release Engineer, Test Engineer, Software Engineer in Test, SDET')
-        meta(name='author' content='Sajjad Hossain')
+        meta(name='description' content='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
+        meta(name='keywords' content='Bangladeshi, Bangladesh, Bangladeshi History, Sharmin Hossain, Digital Archive, Documents, Bangla, Bengali')
+        meta(name='author' content='Sharmin Hossain')
         meta(name='copyright' content='2016')
-        meta(name='application-name' content='http://sajjad.nyc')
+        meta(name='application-name' content='http://bangladeshistory.com')
         // FACEBOOK
-        meta(property='og:title' content='Sajjad Hossain')
+        meta(property='og:title' content='Sharmin Hossain')
         meta(property='og:type' content='application/http')
-        meta(property='og:image' content='/images/logo.png')
-        meta(property='og:url' content='http://sajjad.nyc')
+        meta(property='og:image' content='http://bangladeshistory.com/images/logo.jpg')
+        meta(property='og:url' content='http://bangladeshistory.com')
         meta(property='og:description' content!= description)
         // TWITTER
-        meta(name='twitter:card' content='Novelist, Artisan, Programmer,  Entrepreneur')
-        meta(name='twitter:title' content='Sajjad Hossain')
-        meta(name='twitter:description' content!='Novelist, Artisan, Programmer,  Entrepreneur')
-        meta(name='twitter:image' content='/images/logo.png')
+        meta(name='twitter:card' content='The Bangladeshi Historical Memorial Project')
+        meta(name='twitter:title' content='Sharmin Hossain')
+        meta(name='twitter:description' content!='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
+        meta(name='twitter:image' content='http://bangladeshistory.com/images/images/logo.png')
         // PAGE
-        link(rel='shortcut icon' href='/images/logo.png')
+        link(rel='shortcut icon' href='/images/favicon.png')
         title!= title
         // CSS
         link(href='stylesheets/vendor/materialize.min.css', type='text/css', rel='stylesheet', media='screen,projection')
