--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -270,8 +270,7 @@ blockquote {
 .overlay {
     font-family: 'samarkanoblique';
     font-weight: 100;
-    font-style: italic;
-    text-transform: uppercase;
+    font-style: normal;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -292,14 +291,6 @@ blockquote {
     top: 15px;
     border: none;
     z-index: 10000001;
-}
-
-/* Menu style */
-.overlay ul {
-    margin: 0 auto;
-    list-style: none;
-    padding: 0;
-    font-size: 3.5rem;
 }
 
 .overlay ul li {
@@ -528,17 +519,40 @@ input::placeholder {
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
     .description {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
+
     .landing-header {
-        font-size: 3.2rem;
+        font-size: 2.25rem;
+    }
+
+    /* Menu style */
+    .overlay ul {
+        margin: 0 auto;
+        list-style: none;
+        padding: 0;
+        font-size: 2.25rem;
     }
 }
 
 /* Smartphones (landscape) ----------- */
 @media only screen
 and (min-width : 321px) {
-    /* Styles */
+    .description {
+        font-size: 1rem;
+    }
+
+    .landing-header {
+        font-size: 2rem;
+    }
+
+    /* Menu style */
+    .overlay ul {
+        margin: 0 auto;
+        list-style: none;
+        padding: 0;
+        font-size: 2rem;
+    }
 }
 
 /* Smartphones (portrait) ----------- */
@@ -553,6 +567,18 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) {
     .description {
         font-size: 1.5rem;
+    }
+
+    .landing-header {
+        font-size: 3.5rem;
+    }
+
+    /* Menu style */
+    .overlay ul {
+        margin: 0 auto;
+        list-style: none;
+        padding: 0;
+        font-size: 3.5rem;
     }
 }
 
@@ -575,32 +601,40 @@ and (orientation : portrait) {
 /* Desktops and laptops ----------- */
 @media only screen
 and (min-width : 1224px) {
-    .first-name {
-        font-size: 5rem;
-    }
-
-    .last-name {
-        font-size: 5rem;
-    }
-
     .description {
-        font-size: 1.5rem;
+        font-size: 2rem;
+    }
+
+    .landing-header {
+        font-size: 4rem;
+    }
+
+    /* Menu style */
+    .overlay ul {
+        margin: 0 auto;
+        list-style: none;
+        padding: 0;
+        font-size: 4rem;
     }
 
     .flow-text {
-        font-size: 1.25em;
+        font-size: 1.5em;
     }
 }
 
 /* Large screens ----------- */
 @media only screen
 and (min-width : 1824px) {
-    .first-name {
-        font-size: 5rem;
+    .landing-header {
+        font-size: 4.5rem;
     }
 
-    .last-name {
-        font-size: 5rem;
+    /* Menu style */
+    .overlay ul {
+        margin: 0 auto;
+        list-style: none;
+        padding: 0;
+        font-size: 4.5rem;
     }
 
     .description {
