--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -8,18 +8,18 @@ html(lang='en')
         meta(name='keywords' content='Bangladeshi, Bangladesh, Bangladeshi History, Sharmin Hossain, Digital Archive, Documents, Bangla, Bengali')
         meta(name='author' content='Sharmin Hossain')
         meta(name='copyright' content='2016')
-        meta(name='application-name' content='http://bangladeshistory.com')
+        meta(name='application-name' content='http://bangladeshihistory.com')
         // FACEBOOK
         meta(property='og:title' content='Sharmin Hossain')
         meta(property='og:type' content='application/http')
-        meta(property='og:image' content='http://bangladeshistory.com/images/logo.jpg')
-        meta(property='og:url' content='http://bangladeshistory.com')
+        meta(property='og:image' content='http://bangladeshihistory.com/images/logo.jpg')
+        meta(property='og:url' content='http://bangladeshihistory.com')
         meta(property='og:description' content!= description)
         // TWITTER
         meta(name='twitter:card' content='The Bangladeshi Historical Memorial Project')
         meta(name='twitter:title' content='Sharmin Hossain')
         meta(name='twitter:description' content!='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
-        meta(name='twitter:image' content='http://bangladeshistory.com/images/images/logo.png')
+        meta(name='twitter:image' content='http://bangladeshihistory.com/images/images/logo.png')
         // PAGE
         link(rel='shortcut icon' href='/images/favicon.png')
         title!= title
