--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -11,7 +11,7 @@ html(lang='en')
         meta(name='application-name' content='http://bangladeshihistory.com')
         // FACEBOOK
         meta(property='og:title' content='Sharmin Hossain')
-        meta(property='og:type' content='application/http')
+        meta(property='og:type' content='website')
         meta(property='og:image' content='http://bangladeshihistory.com/images/logo.jpg')
         meta(property='og:url' content='http://bangladeshihistory.com')
         meta(property='og:description' content!= description)
@@ -19,7 +19,7 @@ html(lang='en')
         meta(name='twitter:card' content='The Bangladeshi Historical Memorial Project')
         meta(name='twitter:title' content='Sharmin Hossain')
         meta(name='twitter:description' content!='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
-        meta(name='twitter:image' content='http://bangladeshihistory.com/images/images/logo.png')
+        meta(name='twitter:image' content='http://bangladeshihistory.com/images/logo.jpg')
         // PAGE
         link(rel='shortcut icon' href='/images/favicon.png')
         title!= title
