--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -17,6 +17,7 @@ html(lang='en')
         meta(property='og:description' content!= description)
         // TWITTER
         meta(name='twitter:card' content='The Bangladeshi Historical Memorial Project')
+        meta(name='twitter:site' content='@bangladeshihistry')
         meta(name='twitter:title' content='Sharmin Hossain')
         meta(name='twitter:description' content!='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
         meta(name='twitter:image' content='http://bangladeshihistory.com/images/logo.jpg')
