--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -10,7 +10,7 @@ html(lang='en')
         meta(name='copyright' content='2016')
         meta(name='application-name' content='http://bangladeshihistory.com')
         // FACEBOOK
-        meta(property='og:title' content='Sharmin Hossain')
+        meta(property='og:title' content='The Bangladeshi Historical Memorial Project')
         meta(property='og:type' content='website')
         meta(property='og:image' content='http://bangladeshihistory.com/images/logo.jpg')
         meta(property='og:url' content='http://bangladeshihistory.com')
