--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -18,7 +18,7 @@ html(lang='en')
         // TWITTER
         meta(name='twitter:card', content='The Bangladeshi Historical Memorial Project')
         meta(name='twitter:site', content='@bangladeshistry')
-        meta(name='twitter:creator', content='@metaterran')
+        meta(name='twitter:creator', content='@withpulp')
         meta(property='og:url', content='http://bits.blogs.nytimes.com/2011/12/08/a-twitter-for-my-sister/')
         meta(property='og:title', content='The Bangladeshi Historical Memorial Project')
         meta(property='og:description', content='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
