fixed links and footer

--- a/views/includes/common/footer.jade
+++ b/views/includes/common/footer.jade
@@ -15,7 +15,7 @@ footer#footer.page-footer.green.lighten-5
                             a(href='https://twitter.com/bangladeshistry', target='_blank')
                                 p.flow-text Twitter
                         .col.s12.m3
-                            a(href='https://www.instagram.com/bangladeshistory', target='_blank')
+                            a(href='https://www.instagram.com/bangladeshihistory', target='_blank')
                                 p.flow-text Instagram
                         .col.s12.m6.right-align
                             p.flow-text Share your stories with hashtag <a href="https://www.instagram.com/#bangladeshihistory" target="_blank">#bangladeshihistory</a>
