--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -29,7 +29,7 @@ section#upcoming
                                     p
                                         | #{description}
                                 .card-action.right-align
-                                    a(href='#') #{date}
+                                    p.remove-margin-bottom.remove-margin-top #{date}
                     .col.m5.s12
                         .row.remove-margin-bottom.valign-wrapper
                             .col.s10.valign
