--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,6 +127,10 @@ blockquote {
     margin-bottom: 0px !important;
 }
 
+.remove-margin-top {
+    margin-top: 0px !important;
+}
+
 .remove-padding {
     padding: 0px !important;
 }
