changed social tagline

--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -10,17 +10,17 @@ html(lang='en')
         meta(name='copyright' content='2016')
         meta(name='application-name' content='http://bangladeshihistory.com')
         // FACEBOOK
-        meta(property='og:title' content='The Bangladeshi Historical Memorial Project')
+        meta(property='og:title' content='The Bangladeshi Historical Memory Project')
         meta(property='og:type' content='website')
         meta(property='og:image' content='http://bangladeshihistory.com/images/logo.jpg')
         meta(property='og:url' content='http://bangladeshihistory.com')
         meta(property='og:description' content!= description)
         // TWITTER
-        meta(name='twitter:card', content='The Bangladeshi Historical Memorial Project')
+        meta(name='twitter:card', content='The Bangladeshi Historical Memory Project')
         meta(name='twitter:site', content='@bangladeshistry')
         meta(name='twitter:creator', content='@withpulp')
         meta(property='og:url', content='http://bits.blogs.nytimes.com/2011/12/08/a-twitter-for-my-sister/')
-        meta(property='og:title', content='The Bangladeshi Historical Memorial Project')
+        meta(property='og:title', content='The Bangladeshi Historical Memory Project')
         meta(property='og:description', content='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
         meta(name='twitter:image' content='http://bangladeshihistory.com/images/logo.jpg')
         // PAGE
