added new resources, medium posts and removed twitter and events.

--- a/views/includes/components/menu.jade
+++ b/views/includes/components/menu.jade
@@ -8,7 +8,7 @@
         li.closer
             a(href='#mission', onclick='closeTheShit()') Mission
         li.closer
-            a(href='#upcoming', onclick='closeTheShit()') Upcoming
+            a(href='#archives', onclick='closeTheShit()') Archives
         li.closer
             a(href='#resources', onclick='closeTheShit()') Resources
         li.closer
