--- a/views/includes/sections/resources.jade
+++ b/views/includes/sections/resources.jade
@@ -7,20 +7,20 @@ section#resources
                 h2 Resources
                 // List of Posts
                 .row.remove-margin-bottom.padding-bottom
-                    #banner-one
-                        .col.s12.m6
+                    #post-one
+                        .col.s12.m4
                             .card
                                 .card-image
                                     img(src='images/banners/one.jpg')
                                     h5.card-title
-                                        | Bangladeshi Literature & Texts
+                                        | Learning Bangla Resource Guide NYC
                                 .card-content
                                     p
-                                        | A curated list of Bangladeshi authored literature, compiled by: Jordan Alam, Nafisa Ferdous & Sharmin Hossain
+                                        | A curated list of Bangladeshi authored literature, compiled by Jordan Alam, Nafisa Ferdous & Sharmin Hossain.
                                 .card-action
-                                    a(href='/documents/Bangladeshi_Literature_And_Texts.pdf', target='_blank') Read Now
-                    #banner-two
-                        .col.s12.m6
+                                    a(href='documents/LearningBanglaResourceGuideNYC.pdf', target='_blank') Read Now
+                    #post-two
+                        .col.s12.m4
                             .card
                                 .card-image
                                     img(src='images/banners/two.jpg')
@@ -30,4 +30,16 @@ section#resources
                                     p
                                         | Participants will be able to understand how the status quo of American racism sheds light on the history of Islamophobia.
                                 .card-action
-                                    a(href='/documents/Islamophobia_101.pdf', target='_blank') Read Now
+                                    a(href='documents/Islamophobia101bySharminHossain.pdf', target='_blank') Read Now
+                    #post-three
+                        .col.s12.m4
+                            .card
+                                .card-image
+                                    img(src='images/banners/three.jpg')
+                                    h5.card-title
+                                        | Bengali Social Justice Vocabulary
+                                .card-content
+                                    p
+                                        | Words translated and transliterated in Bengali for those organizing Bangladeshi communities.
+                                .card-action
+                                    a(href='documents/BengaliSocialJusticeVocabulary.pdf', target='_blank') Read Now
