added get involded section

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,6 +139,11 @@ blockquote {
     padding-top: 20px;
 }
 
+.padding-top-light {
+    padding-top: 10px;
+}
+
+
 .padding-bottom {
     padding-bottom: 30px;
 }
