--- a/views/includes/sections/updates.jade
+++ b/views/includes/sections/updates.jade
@@ -8,10 +8,17 @@ section#archives
                 script(async='', src='https://static.medium.com/embed.js')
                 a.m-story(data-collapsed='false', data-width="100%", data-border='false', href='https://medium.com/@bangladeshistry/amader-golpo-meet-shahana-hanif-bangladeshi-visionary-6ef1b5899f1a') Amader Golpo: Meet Shahana Hanif, Bangladeshi visionary
                 p.flow-text This is a collaborative project that is seeking innovative Bangladeshi folks across the diaspora who are seeking to work in Bangladeshi community to design a political theater and digital archive collective. We're looking for Bangladeshi artists, creators, writers, visionaries and changemakers. <strong>Are you a graphic designer? Singer? Documentarian? Painter? Actress? We'd love to collaborate with you!</strong>
-                a.waves-effect.waves-light.btn-large(href='#contact')
-                    i.material-icons.right send
-                    | Contact
-
+                .row.remove-margin-bottom
+                    .col.s12.m6
+                        .hide-on-med-and-up.padding-top-light
+                        a.waves-effect.waves-light.btn-large(href='http://bit.ly/1TmeR1T', target='_blank')
+                            i.material-icons.right border_color
+                            | Apply
+                    .col.s12.m6
+                        .hide-on-med-and-up.padding-top-light
+                        a.waves-effect.waves-light.btn-large(href='#contact')
+                            i.material-icons.right send
+                            | Contact
 
 
 
