updated description for facebook

--- a/views/includes/common/header.jade
+++ b/views/includes/common/header.jade
@@ -1,42 +1,40 @@
-doctype html
-html(lang='en')
-    head
-        meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
-        meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
-        // Google
-        meta(name='description' content='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
-        meta(name='keywords' content='Bangladeshi, Bangladesh, Bangladeshi History, Sharmin Hossain, Digital Archive, Documents, Bangla, Bengali')
-        meta(name='author' content='Sharmin Hossain')
-        meta(name='copyright' content='2016')
-        meta(name='application-name' content='http://bangladeshihistory.com')
-        // FACEBOOK
-        meta(property='og:title' content='The Bangladeshi Historical Memory Project')
-        meta(property='og:type' content='website')
-        meta(property='og:image' content='http://bangladeshihistory.com/images/logo.jpg')
-        meta(property='og:url' content='http://bangladeshihistory.com')
-        meta(property='og:description' content!= description)
-        // TWITTER
-        meta(name='twitter:card', content='The Bangladeshi Historical Memory Project')
-        meta(name='twitter:site', content='@bangladeshistry')
-        meta(name='twitter:creator', content='@withpulp')
-        meta(name='twitter:image' content='http://bangladeshihistory.com/images/logo.jpg')
-        // PAGE
-        link(rel='shortcut icon' href='/images/favicon.png')
-        title!= title
-        // CSS
-        link(href='stylesheets/vendor/materialize.min.css', type='text/css', rel='stylesheet', media='screen,projection')
-        link(href='stylesheets/vendor/pace.css', type='text/css', rel='stylesheet')
-        link(rel='stylesheet', href='stylesheets/vendor/morphext.css')
-        link(rel='stylesheet', href='stylesheets/vendor/animate.css')
-        link(href='stylesheets/style.css', type='text/css', rel='stylesheet', media='screen,projection')
-        // JS
-        script(src='javascripts/vendor/jquery-1.11.3.min.js')
-        script(src='javascripts/vendor/pace.js')
-        script(src='javascripts/main.js')
-        script(src='javascripts/vendor/morphext.min.js')
-        script(src='javascripts/vendor/modernizr-2.8.3.min.js')
-        script(src='http://s.cdpn.io/43121/instafeed.min.js')
-        // Fonts
-        link(href='http://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
-        link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800', rel='stylesheet')
-        link(href='http://fonts.googleapis.com/css?family=Exo+2:300italic,100italic,200italic,200,900italic,300,400,100,400italic,900', rel='stylesheet')
+head
+    meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
+    // Google
+    meta(name='description' content='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
+    meta(name='keywords' content='Bangladeshi, Bangladesh, Bangladeshi History, Sharmin Hossain, Digital Archive, Documents, Bangla, Bengali')
+    meta(name='author' content='Sharmin Hossain')
+    meta(name='copyright' content='2016')
+    meta(name='application-name' content='http://bangladeshihistory.com')
+    // FACEBOOK
+    meta(property='og:title' content='The Bangladeshi Historical Memory Project')
+    meta(property='og:type' content='website')
+    meta(property='og:image' content='http://bangladeshihistory.com/images/logo.jpg')
+    meta(property='og:url' content='http://bangladeshihistory.com')
+    meta(property='og:description' content='The Bangladeshi Historical Memory Project is an interactive visual and narrative based digital archive & political theater project documenting the history & resilience of Bangladeshi people.')
+    // TWITTER
+    meta(name='twitter:card', content='The Bangladeshi Historical Memory Project')
+    meta(name='twitter:site', content='@bangladeshistry')
+    meta(name='twitter:creator', content='@withpulp')
+    meta(name='twitter:image' content='http://bangladeshihistory.com/images/logo.jpg')
+    // PAGE
+    link(rel='shortcut icon' href='/images/favicon.png')
+    title!= title
+    // CSS
+    link(href='stylesheets/vendor/materialize.min.css', type='text/css', rel='stylesheet', media='screen,projection')
+    link(href='stylesheets/vendor/pace.css', type='text/css', rel='stylesheet')
+    link(rel='stylesheet', href='stylesheets/vendor/morphext.css')
+    link(rel='stylesheet', href='stylesheets/vendor/animate.css')
+    link(href='stylesheets/style.css', type='text/css', rel='stylesheet', media='screen,projection')
+    // JS
+    script(src='javascripts/vendor/jquery-1.11.3.min.js')
+    script(src='javascripts/vendor/pace.js')
+    script(src='javascripts/main.js')
+    script(src='javascripts/vendor/morphext.min.js')
+    script(src='javascripts/vendor/modernizr-2.8.3.min.js')
+    script(src='http://s.cdpn.io/43121/instafeed.min.js')
+    // Fonts
+    link(href='http://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800', rel='stylesheet')
+    link(href='http://fonts.googleapis.com/css?family=Exo+2:300italic,100italic,200italic,200,900italic,300,400,100,400italic,900', rel='stylesheet')
