--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,7 +184,7 @@ blockquote {
 }
 
 .landing-header {
-    font-family: 'samarkanoblique';
+    font-family: 'Open Sans', sans-serif;
     color: #ffffff;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.7);
 }
@@ -277,7 +277,7 @@ blockquote {
 /* Menu */
 /* Overlay style */
 .overlay {
-    font-family: 'samarkanoblique';
+    font-family: 'Open Sans', sans-serif;
     font-weight: 100;
     font-style: normal;
     position: fixed;
